fixed font overlap

--- a/css/gl.css
+++ b/css/gl.css
@@ -447,7 +447,7 @@ Scale up
 ------------------------------------------------------------ */
 @media screen and (min-width: 768px) {	
 	.bigTitle{
-			font-size: 4vw;
+			font-size: 3.5vw;
 			letter-spacing: 5px;
 			line-height: 1.3;
 			font-stretch: expanded;
